--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namaste React</title>
+    <title>Application</title>
+    <link rel="stylesheet" href="./src/app.scss">
 </head>
 <body>
     <div className="design" id="root"></div>
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
