using redux-toolkit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application</title>
-    <link rel="stylesheet" href="./src/app.scss">
+    <link rel="stylesheet" href="./src/app.css">
 </head>
 <body>
     <div className="design" id="root"></div>
